# osm-python-tools

./: .gitignore  CITATION.cff  README.md  publish.sh  setup.cfg  setup.py  version-history.md
.github/workflows/: tests.yml
OSMPythonTools/: __init__.py  api.py  data.py  element.py  nominatim.py  overpass.py
OSMPythonTools/cachingStrategy/: __init__.py  base.py  json.py  pickle.py  strategy.py
OSMPythonTools/internal/: cacheObject.py  elementShallow.py  response.py  singletonApi.py
docs/: api.md  data.md  element.md  general-comments.md  general-remarks.md  nominatim.md  overpass.md
examples/: example.py  generate-images.py
tests/: test_api.py  test_cache.py  test_data.py  test_element.py  test_nominatim.py  test_overpass.py
