# see https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
description = A library to access OpenStreetMap related services
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

