# see https://packaging.python.org/en/latest/tutorials/packaging-projects

[metadata]
name = OSMPythonTools
author = Franz-Benjamin Mocnik
author_email = mail@mocnik-science.net
description = A library to access OpenStreetMap related services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mocnik-science/osm-python-tools
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

